Fix bug: incorrect "report a bug" icon hover behavior
Previously, hovering over the invisible link text for the "Report a bug"
icon resulted in the icon changing color. I've reduced the size of the
text in order to prevent this.

--- a/src/AppControls/AppControls.css
+++ b/src/AppControls/AppControls.css
@@ -70,6 +70,7 @@
   /* We have provided text for the link so that it is accessible to screen
   readers, but we hide it here */
   color: transparent !important;
+  font-size: 1pt;
 }
 
 .app-controls__source-link {
